# learn-haskell

./: learn-haskell.cabal
app/: Main.hs
src/: BetterPredicate.hs  LocalReader.hs  MaxAlternatingSum.hs  MovieReview.hs  Parse.hs  Prettify.hs  PrettyJSON.hs  PutJSON.hs  RandomSupply.hs  SimpleJSON.hs  Supply.hs  SupplyClass.hs  SupplyInstance.hs
src/prac/: CoproductFunctor.hs  JsonParse.hs
src/rwhskl/ch01/: WC.hs
src/rwhskl/ch02/: ch02.hs
src/rwhskl/ch03/: ADT.hs
src/rwhskl/ch04/: InteractWith.hs  ch04.hs
src/rwhskl/ch05/: Prettify.hs
src/rwhskl/ch08/: GlobRegex.hs
src/rwhskl/ch09/: ControlledVisit.hs
src/rwhskl/ch10/: Parse.hs
src/rwhskl/ch12/: ch12.hs
src/rwhskl/ch13/: num.hs
src/rwhskl/ch14/: Random.hs
src/rwhskl/ch15/: MonadHandle.hs  SayHello.hs
src/rwhskl/ch18/: UglyStack.hs
src/rwhskl/ch24/: NiceFork.hs  prac.hs
