cabal-version:      2.4
name:               learn-haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             wangyahui04
maintainer:         wangyahui04@meituan.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib SimpleJSON PrettyJSON Prettify

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.16.4.0,
        bytestring,
        mtl,
        random
    hs-source-dirs:   src
    default-language: Haskell2010

executable learn-haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        bytestring,
        mtl,
        random,
        learn-haskell

    hs-source-dirs:   app
    default-language: Haskell2010
